WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132039
[EFL][WK1] There are many failures in fast/forms since
r163033
https://bugs.webkit.org/show_bug.cgi?id=132039
Summary
[EFL][WK1] There are many failures in fast/forms since r163033
Ryuan Choi
Reported
2014-04-22 22:02:22 PDT
SSIA
Attachments
Patch
(1.95 KB, patch)
2014-04-22 22:05 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2014-04-22 22:05:02 PDT
Created
attachment 229954
[details]
Patch
Gyuyoung Kim
Comment 2
2014-04-22 22:12:05 PDT
Comment on
attachment 229954
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229954&action=review
LGTM
> Source/WebKit/efl/ewk/ewk_view.cpp:3686 > + break;
Additionally, I think we need to add ASSERT_NOT_REACHED() when user passes unsupported type. default: ASSERT_NOT_REACHED(); break;
Ryuan Choi
Comment 3
2014-04-22 22:29:10 PDT
Committed
r167697
: <
http://trac.webkit.org/changeset/167697
>
Ryuan Choi
Comment 4
2014-04-22 22:34:45 PDT
Comment on
attachment 229954
[details]
Patch clearing flags. landed with gyuyoung's suggestion
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug