[EFL][WK1] There are many failures in fast/forms since r163033 https://bugs.webkit.org/show_bug.cgi?id=132039

Reviewed by Gyuyoung Kim.

* ewk/ewk_view.cpp: Added break statements which is missing while remove COMPILE_ASSERT_MATCHING_ENUM
(ewk_view_navigation_policy_decision):

Canonical link: https://commits.webkit.org/150114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167697 268f45cc-cd09-0410-ab3c-d52691b4dbfc